--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile project(':decentbanner')
+//    compile project(':decentbanner')
+    compile 'com.chengdazhi.decentbanner:decentbanner:1.0.2'
 }
