--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
 //    compile project(':decentbanner')
-    compile 'com.chengdazhi.decentbanner:decentbanner:1.0.2'
+    compile 'it.chengdazhi.decentbanner:decentbanner:1.0.1'
 }
