--- a/decentbanner/src/main/AndroidManifest.xml
+++ b/decentbanner/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.decentbanner">
+    package="it.chengdazhi.decentbanner">
 
     <application
         android:allowBackup="true"
