--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "com.example.flipboardbanner"
+        applicationId "com.example.chengdazhi"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -24,5 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
 //    compile project(':decentbanner')
-    compile 'it.chengdazhi.decentbanner:decentbanner:1.0.3'
+    compile 'it.chengdazhi.decentbanner:decentbanner:1.0.5'
 }
